<resources>
    <string name="app_name">Registration</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="registration">Registration</string>
    <string name="registered_data">Registered-Data</string>

    <string-array name="gender">
        <item>N/A</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>