<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"/>

    <TextView
        android:id="@+id/tvItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginTop="4dp"
        android:padding="1dp"
        android:textSize="18dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guideline1"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/tvItemMobile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mobile"
        android:padding="1dp"
        android:textSize="18dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvItemName"
        app:layout_constraintLeft_toLeftOf="@id/guideline1"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/tvItemEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:padding="1dp"
        android:textSize="18dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvItemMobile"
        app:layout_constraintLeft_toLeftOf="@id/guideline1"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/tvItemGender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:padding="1dp"
        android:textSize="18dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvItemEmail"
        app:layout_constraintLeft_toLeftOf="@id/guideline1"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/tvItemAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:padding="1dp"
        android:layout_marginBottom="4dp"
        android:textSize="18dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvItemGender"
        app:layout_constraintLeft_toLeftOf="@id/guideline1"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginTop="4dp"
        android:padding="1dp"
        android:textSize="18dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline1"/>
    <TextView
        android:id="@+id/tvMobile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mobile"
        android:padding="1dp"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline1"/>
    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:padding="1dp"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/tvMobile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline1"/>
    <TextView
        android:id="@+id/tvGender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:padding="1dp"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline1"/>
    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:padding="1dp"
        android:layout_marginBottom="4dp"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/tvGender"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline1"/>

</androidx.constraintlayout.widget.ConstraintLayout>